fix: adds module